--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ playlists/playlist-zapnitv.m3u
 playlists/sledovanitv-playlist.m3u
 playlists/zapnitv.cookie
 playlists/zapnitv-playlist.m3u
+control/Pipfile
